<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- button names -->
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnAdd">+</string>
    <string name="btnSub">-</string>
    <string name="btnMult">*</string>
    <string name="btnDiv">/</string>
    <string name="btnRB">)</string>
    <string name="btnLB">(</string>
    <string name="btnEq">=</string>
    <string name="btnDel">Del</string>
    <string name="btnClear">Clear</string>
    <string name="btnDot">.</string>

</resources>
