<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
android:paddingRight="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_vertical_margin">

<EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:id="@+id/etExpression"
    android:editable="false"
    android:clickable="false"
    android:textSize="40sp"
    android:textStyle="normal"
    android:longClickable="false"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:id="@+id/tvResult"
    android:textSize="56sp"
    android:textStyle="bold"
    android:layout_below="@+id/etExpression"
    android:layout_alignRight="@+id/etExpression"
    android:layout_alignEnd="@+id/etExpression"
    android:layout_marginTop="20dp"/>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@+id/tvResult"
    android:layout_alignRight="@+id/etExpression"
    android:layout_alignEnd="@+id/etExpression"
    android:layout_marginTop="30dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/fillerCol1"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btn7"
                android:id="@+id/btn7"
                android:layout_weight="0.2"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btn4"
                android:id="@+id/btn4"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btn1"
                android:id="@+id/btn1"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btn0"
                android:id="@+id/btn0"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25">

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btnLB"
                android:id="@+id/btnLBracket"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btn8"
                android:id="@+id/btn8"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btn5"
                android:id="@+id/btn5"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btn2"
                android:id="@+id/btn2"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btnDot"
                android:id="@+id/btnDot"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25">

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btnRB"
                android:id="@+id/btnRBracket"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btn9"
                android:id="@+id/btn9"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btn6"
                android:id="@+id/btn6"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btn3"
                android:id="@+id/btn3"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btnEq"
                android:id="@+id/btnEqual"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25">

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btnDel"
                android:id="@+id/btnDel"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin" />

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btnAdd"
                android:id="@+id/btnAdd"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btnSub"
                android:id="@+id/btnSub"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btnMult"
                android:id="@+id/btnMult"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>

            <Button
                android:background="@drawable/button_style"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btnDiv"
                android:id="@+id/btnDiv"
                android:layout_weight="0.2"
                android:padding="2dp"
                android:layout_margin="@dimen/button_margin"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

</RelativeLayout>